# tui-money

./: .gitignore  AGENTS.md  Cargo.toml  GUIDELINES.md
.agent/workflows/: check.md
.github/workflows/: ci.yml
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  models.rs  repository.rs  user.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_init.sql  002_users.sql
crates/storage/src/: lib.rs  mapper.rs  repository.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  event.rs  layout.rs  lib.rs
crates/ui/src/screens/: create_user.rs  dashboard.rs  login.rs  mod.rs
crates/ui/src/widgets/: mod.rs
