[workspace]
resolver = "2"
members = [
  "crates/app",
  "crates/domain",
  "crates/storage",
  "crates/ui",
  "crates/analytics",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chrono = "0.4"
crossterm = "0.27"
ratatui = "0.27"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
thiserror = "1.0"
ctrlc = "3.4"
