[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
chrono = { workspace = true }
rusqlite = { workspace = true }
rusty-money = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
